# microlua

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MEMORY_DIAGNOSIS.md  README.md  debug.py  meson.build  meson_options.txt
.agent/rules/: debugging.md  ensure-tests.md  microlua.md  no-complexity-prioritization.md  no-large-instructions.md  no-simple-implementations.md
.baselines-pass4/: MLUA.final.map  MLUA.start.map  MLUAR.final.map  MLUAR.start.map  RESULTS.final.md  RESULTS.start.md
bench/: _lua_mem.lua  bench.py
bench/benchmarksgame/: README.md  bench.py  lua_peak_runner.c
bench/benchmarksgame/original/: binarytrees-lua-4.html  fannkuchredux-lua-1.html  fasta-lua-3.html  knucleotide-lua-2.html  lua.html  revcomp-lua-5.html  spectralnorm-lua-1.html
bench/benchmarksgame/workloads/: binarytrees.lua  knucleotide.lua  revcomp.lua  spectralnorm.lua
bench/memory/: .gitignore  build_lua55.py  lua55_memory_runner.c  mlua_memory_runner.c  run.py
bench/memory/results/: after-revcomp.json  after-revcomp.md  after-small-objects.json  after-small-objects.md  after.json  after.md  baseline.json  baseline.md
bench/memory/workloads/: binarytrees.lua  closures.lua  globals_modules.lua  knucleotide.lua  local_lifetime_builder.lua  many_numbers.lua  many_short_strings.lua  many_tables.lua  nested_tables.lua  parser_codegen.lua  revcomp.lua  spectralnorm.lua  temp_allocations.lua
bench/workloads/: fib.lua  listops.lua  loop.lua  matrix.lua  sieve.lua  sort.lua  strbuild.lua  strjoin.lua  strscan.lua  tableconcat.lua
cross/: mips-be-qemu.ini  x86-multilib.ini
platform/irix/: Dockerfile.toolchain  README.md  build-objects.sh  build-toolchain.sh  link-on-box.csh
platform/ti84ce/: .gitignore  README.md
platform/ti84ce/common/: bindings_ce.c  console.c  mlua_ce.h  requirer.c  runner.c
platform/ti84ce/examples/: MANDELB.8xp  bench_int.basic.txt  bench_int.lua  bench_list.basic.txt  bench_list.lua  bench_str.basic.txt  bench_str.lua  demo.lua  mandel.basic.txt  mandel.lua  smoke.lua
platform/ti84ce/repl/: autotest-cesium.json  autotest.json  makefile
platform/ti84ce/repl/src/: main.c  repl_input.c
platform/ti84ce/repl/test/: SMOKELUA.8xv
platform/ti84ce/runner/: autotest-cesium.json  autotest.json  makefile
platform/ti84ce/runner/src/: main.c
platform/ti84ce/runner/test/: .gitignore  SMOKE.8xv
platform/ti84ce/tools/: bench_int_run.json  bench_list_run.json  bench_str_run.json  embed_chunk.py  get_clibs.py  make_basic.py  mandel_run.json  runbench.py
platform/ti84ce/tools/fixtures/: BENCHINT.8xv  BENCHLST.8xv  BENCHSTR.8xv  MANDEL.8xv
site/: index.html  wrangler.jsonc
spec/: SPEC.BROAD.md  SPEC.EARLY.MD  SPEC.ERRORS.md  SPEC.FORLOOP.md  SPEC.TECHNICAL.md
src/: MLuaAPI.c  MLuaAlloc.c  MLuaAlloc.h  MLuaCode.c  MLuaCode.h  MLuaConfig.h  MLuaConvert.c  MLuaConvert.h  MLuaCore.c  MLuaCore.h  MLuaDebug.h  MLuaDump.c  MLuaDump.h  MLuaError.h  MLuaFloatBits.h  MLuaFunc.c  MLuaFunc.h  MLuaGC.c  MLuaGC.h  MLuaLex.c  MLuaLex.h  MLuaLib.c  MLuaParse.c  MLuaParse.h  MLuaRepl.c  MLuaStdLib.h  MLuaString.c  MLuaString.h  MLuaTable.c  MLuaTable.h  MLuaThread.c  MLuaThread.h  MLuaUTF8.c  MLuaUTF8.h  MLuaUndump.c  MLuaUndump.h  MLuaVM.c  MLuaVM.h  MLuaValue.c  MLuaValue.h
src/extensions/: MLuaStdLib.c
src/ports/: README.md  cortex_m.h  generic32.h  generic64.h  irix_mips.h  riscv32.h  ti84ce.h
tests/: _wrap.py  bytecode_only_build.py  cli_bytecode.py  error_lines.py  fused_ops_fence.py  gc_deep.py  gc_pressure.py  meson.build  security_regressions.py  stack_trace.py
tests/embed/: embed_smoke.c
tests/internal/: SmallHeapRunner.c  TestAlloc.c  TestBytecode.c  TestCore.c  TestCoro.c  TestFloatBits.c  TestGC.c  TestLex.c  TestLib.c  TestMemoryDiagnostics.c  TestParse.c  TestString.c  TestTable.c  TestVM.c  TestValue.c  TestWidths.c  meson.build
tests/interpreter/: _base.lua  test_base.lua  test_bigint.lua  test_closure.lua  test_coroutine.lua  test_fold.lua  test_index_fused.lua  test_io.lua  test_math.lua  test_operators.lua  test_string.lua  test_table.lua  test_table_numarray.lua
tests/smoke/: test_concat.lua  test_coro.lua  test_coro2.lua  test_fib.lua  test_matrix.lua  test_sieve.lua  test_sieve2.lua  test_string_pattern.lua  test_string_pattern2.lua  test_table_ops.lua
tools/: check_libc_free.py  cross_canary.py  map_size.py  mips_be_docker.sh
